@@ -5,6 +5,8 @@ ags (2.0.35)
 	* added ags_add_audio_signal_test.c
 	* added ags_add_effect_test.c
 	* added ags_add_note_test.c
+	* added ags_add_soundcard_test.c
+	* added ags_apply_bpm_test.c
 
 ags (2.0.34)
 
